--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.13.1",
     "mobx": "^6.13.1",
     "mobx-react": "^9.1.1",
     "next": "14.2.5",
